settings: Fix streams tab-switcher misalignment for iPad size devices.
Fixes: #14913.

--- a/static/styles/app_components.scss
+++ b/static/styles/app_components.scss
@@ -260,6 +260,10 @@
 
     .stream_sorter_toggle {
         margin-left: auto;
+
+        @media (min-width: 750px) and (max-width: 1033px) {
+            margin-left: unset;
+        }
     }
 }
 
